# AGH-SysOpy

set-1/WieczorekMateusz/cw01/: readme-zestaw.txt
set-1/WieczorekMateusz/cw01/zad1/: CMakeLists.txt  memory-manager.c  memory-manager.h
set-1/WieczorekMateusz/cw01/zad2/: CMakeLists.txt  main.c  memory-manager.c  memory-manager.h  raport2.txt  readme.txt
set-1/WieczorekMateusz/cw01/zad3/: CMakeCache.txt  CMakeLists.txt
set-1/WieczorekMateusz/cw01/zad3/Testing/Temporary/: CTestCostData.txt
set-10/WieczorekMateusz/cw10/: readme.txt
set-10/WieczorekMateusz/cw10/zad1/: CMakeLists.txt  client.c  common.h  server.c
set-10/WieczorekMateusz/cw10/zad2/: CMakeLists.txt  client.c  common.h  server.c
set-2/WieczorekMateusz/cw02/: readme.txt
set-2/WieczorekMateusz/cw02/zad1/: CMakeLists.txt  main.c  tests.sh  wyniki.txt
set-2/WieczorekMateusz/cw02/zad2/: main.c
set-3/WieczorekMateusz/cw03/: readme.txt
set-3/WieczorekMateusz/cw03/zad1/: CMakeLists.txt  main.c
set-3/WieczorekMateusz/cw03/zad2/: CMakeLists.txt  main.c  test.c
set-4/WieczorekMateusz/cw04/: readme.txt
set-4/WieczorekMateusz/cw04/zad1a/: CMakeLists.txt  main.c
set-4/WieczorekMateusz/cw04/zad1b/: CMakeLists.txt  main.c
set-4/WieczorekMateusz/cw04/zad2/: CMakeLists.txt  main.c
set-4/WieczorekMateusz/cw04/zad3a/: CMakeLists.txt  catcher.c  sender.c
set-4/WieczorekMateusz/cw04/zad3b/: CMakeLists.txt  catcher.c  sender.c
set-5/WieczorekMateusz/cw05/: readme.txt
set-5/WieczorekMateusz/cw05/zad1/: 1.txt  2.txt  CMakeLists.txt  commands.txt  main.c
set-5/WieczorekMateusz/cw05/zad2/: CMakeLists.txt  master.c  slave.c
set-6/WieczorekMateusz/cw06/: readme.txt
set-6/WieczorekMateusz/cw06/zad1/: CMakeLists.txt  client.c  cmd.txt  common.c  common.h  server.c
set-6/WieczorekMateusz/cw06/zad2/: CMakeLists.txt  client.c  cmd2.txt  common.c  common.h  server.c
set-7/WieczorekMateusz/cw07/: readme.txt
set-7/WieczorekMateusz/cw07/zad1/: CMakeLists.txt  common.c  common.h  loaders-spawner.c  trucker.c
set-7/WieczorekMateusz/cw07/zad2/: CMakeLists.txt  common.c  common.h  loader.c  loaders-spawner.c
set-8/WieczorekMateusz/cw08/: Times.txt  readme.txt
set-8/WieczorekMateusz/cw08/zad1/: CMakeLists.txt  gen-times.sh  main.c
set-8/WieczorekMateusz/cw08/zad1/filters/: my-sharpen  sharpen
set-9/WieczorekMateusz/cw09/: readme.txt
set-9/WieczorekMateusz/cw09/zad1/: CMakeLists.txt  main.c
